Different ways of Retrieving values from appSettings in controller and view

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -6,5 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "SendGridKeySampleKey_AppSettings_1111",
+  "Twilio": {
+    "AuthToken": "Twili_Auth_AppSettings_2222",
+    "AccountSid": "Twili_Sid_AppSettings_3333"
+  },
+  "FirstLevelSetting": {
+    "SecondLevelSetting": {
+      "BottomLevelSetting": "This is 3rd level setting"
+    }
+  }
+
+
 }
