Binding a class to App Settings Section

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -10,7 +10,8 @@
   "SendGridKey": "SendGridKeySampleKey_AppSettings_1111",
   "Twilio": {
     "AuthToken": "Twili_Auth_AppSettings_2222",
-    "AccountSid": "Twili_Sid_AppSettings_3333"
+    "AccountSid": "Twili_Sid_AppSettings_3333",
+    "PhoneNumber": "+111111333"
   },
   "FirstLevelSetting": {
     "SecondLevelSetting": {
