Hierarchy and limitations of extension method

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -17,6 +17,18 @@
     "SecondLevelSetting": {
       "BottomLevelSetting": "This is 3rd level setting"
     }
+  },
+
+  "SocialLoginSettings": {
+    "SocialLoginEnabled": true,
+    "FacebookSettings": {
+      "Key": "Facebook Key 111111",
+      "Value": "Facebook Value 1111111"
+    },
+    "GoogleSettings": {
+      "Key": "Google Key 1111111",
+      "Value": "Google Value 1111111"
+    }
   }
 
 
