--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -29,7 +29,12 @@
       "Key": "Google Key 1111111",
       "Value": "Google Value 1111111"
     }
+  },
+  "ConnectionStrings": {
+    "AppsettingsManagerDb": "Connection String from AppSettings"
+    //"AppsettingsManagerDb": "Server=(localdb)\\mssqllocaldb;Database=WazeCredit;Trusted_Connection=True;MultipleActiveResultSet"
   }
+
 
 
 }
