Environment Specific AppSettings

--- a/AppSettingsManager/appsettings.Development.json
+++ b/AppSettingsManager/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AppsettingsManagerDb": "Connection String from AppSettings.Development"
+    //"AppsettingsManagerDb": "Server=(localdb)\\mssqllocaldb;Database=WazeCredit;Trusted_Connection=True;MultipleActiveResultSet"
+  },
+  "Twilio": {
+    "PhoneNumber": "+111111333 from DB"
   }
 }
