--- a/AppSettingsManager/appsettings.Development.json
+++ b/AppSettingsManager/appsettings.Development.json
@@ -6,11 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "AppsettingsManagerDb": "Connection String from AppSettings.Development"
-    //"AppsettingsManagerDb": "Server=(localdb)\\mssqllocaldb;Database=WazeCredit;Trusted_Connection=True;MultipleActiveResultSet"
-  },
-  "Twilio": {
-    "PhoneNumber": "+111111333 from DB"
-  }
+  "SendGridKey": "xyz@123 in Appsettings"
+  //"ConnectionStrings": {
+  //  "AppsettingsManagerDb": "Connection String from AppSettings.Development"
+  //  //"AppsettingsManagerDb": "Server=(localdb)\\mssqllocaldb;Database=WazeCredit;Trusted_Connection=True;MultipleActiveResultSet"
+  //},
+  //"Twilio": {
+  //  "PhoneNumber": "+111111333 from DB"
+  //}
 }
